2006-04-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Format default error messages in a saner way.

2006-04-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Moved getRealVideoSink(), record() and stopRecording() methods up from
	SmartTimelineBin to SmartBin.
	* pitivi/playground.py:
	Documentation cleanup.
	Make relevant functions return False for failures.
	Added _handleError() and _handleWarning() methods for analyzing the
	error/warning information and creating user-friendly messages.
	* pitivi/utils.py:
	New function bin_contains() in order to figure out if an element is in
	a bin recursively.
	* pitivi/ui/mainwindow.py:
	Only display one ErrorDialogBox at a time
	* pitivi/ui/viewer.py:
	Improve aspect ratio handling

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Connect bus message handler to the default bin too.
	* pitivi/ui/mainwindow.py:
	Close error message when you click on OK
	* pitivi/ui/viewer.py:
	Remove error message for failed state change.

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Added "error" signal
	* pitivi/ui/mainwindow.py:
	Show Error dialog box on playground bus errors.
	* pitivi/ui/viewer.py:
	slight bug

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Return gst.StateChangeReturn from setting pipeline to PLAYING in play()
	* pitivi/ui/viewer.py:
	Display error message if we couldn't set the default bin to PLAYING
	* pitivi/ui/timelineobjects.py:
	remove debug tooltip

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Better sentence for tooltip of "Toggle Fullscreen" action
	* pitivi/ui/sourcefactories.py:
	Double-click on a row makes it play.
	Slight cleanup.

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	GNonLin >= 0.10.1
	GStreamer >= 0.10.4
	0.9.9.4 pre-release

2006-04-10  Edward Hervey  <edward@fluendo.com>

	* application-pitivi.png:
	* pitivi.png:
	* Makefile.am: