@@ -1,5 +1,12 @@
 2006-04-20  Edward Hervey  <edward@fluendo.com>
 
+	* pitivi/ui/viewer.py:
+	Remember previous state before scrubbing, so we can go back to that
+	state (playing or paused).
+	Should fix #338064
+
+2006-04-20  Edward Hervey  <edward@fluendo.com>
+
 	* pitivi/playground.py:
 	Format default error messages in a saner way.
 
